--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,6 @@ test:
 #  <<: *default
 #  database: db/production.sqlite3
 
-production:
-  adapter: postgresql
-  encoding: unicode
+#production:
+  #adapter: postgresql
+  #encoding: unicode
